--- a/environment.yml
+++ b/environment.yml
@@ -17,7 +17,7 @@ dependencies:
 - notebook=4.1.0=py35_0
 - numpy=1.10.4=py35_0
 - openssl=1.0.2g=0
-- pandas=0.18.0=np111py35_0
+- pandas=0.18.0
 - path.py=8.1.2=py35_1
 - python=3.5.1=0
 - python-dateutil=2.5.2=py35_0
@@ -27,7 +27,7 @@ dependencies:
 - qtconsole=4.1.1=py35_0
 - readline=6.2=2
 - requests=2.9.1=py35_0
-- scipy=0.17.0=np111py35_0
+- scipy=0.17.0
 - setuptools=20.6.7=py35_0
 - tornado=4.3=py35_0
 - traitlets=4.1.0=py35_0
