--- a/environment.yml
+++ b/environment.yml
@@ -5,7 +5,7 @@ dependencies:
 - geos=3.3.3=0
 - jupyter=1.0.0=py35_1
 - krb5=1.13.2=0
-- libgdal=2.0.0=0
+- libgdal=2.0.0
 - libnetcdf=4.3.3.1=3
 - libpng=1.6.17=0
 - matplotlib=1.5.1=np110py35_0
