--- a/environment.yml
+++ b/environment.yml
@@ -2,7 +2,7 @@
 # might not work on your Mac, Linux or Windows.
 name: social
 dependencies:
-- basemap=1.0.7=np110py35_0
+- basemap
 - click=6.6=py35_0
 - cligj=0.2.0=py35_0
 - curl=7.45.0=0
