--- a/environment.yml
+++ b/environment.yml
@@ -1,8 +1,8 @@
-# This environment is tuned for use on mybinder
-# might not work on your Mac, Linux or Windows.
-name: social
+name: finddx
 dependencies:
-- basemap
+- appnope=0.1.0=py35_0
+- backports=1.0=py35_0
+- basemap=1.0.7=np110py35_0
 - click=6.6=py35_0
 - cligj=0.2.0=py35_0
 - curl=7.45.0=0
@@ -10,49 +10,41 @@ dependencies:
 - decorator=4.0.9=py35_0
 - entrypoints=0.2=py35_1
 - fiona=1.6.0=np110py35_0
-- fontconfig=2.11.1=5
 - freetype=2.5.5=0
-- geos=3.4.2=0
-- hdf4=4.2.11=0
+- geos=3.3.3=0
+- get_terminal_size=1.0.0=py35_0
 - hdf5=1.8.15.1=2
 - ipykernel=4.3.1=py35_0
-- ipython=4.1.2=py35_1
+- ipython=4.2.0=py35_0
 - ipython_genutils=0.1.0=py35_0
 - ipywidgets=4.1.1=py35_0
 - jinja2=2.8=py35_0
-- jpeg=8d=0
-- jsonschema=2.4.0=py35_0
+- jsonschema=2.5.1=py35_0
 - jupyter=1.0.0=py35_2
 - jupyter_client=4.2.2=py35_0
 - jupyter_console=4.1.1=py35_0
 - jupyter_core=4.1.0=py35_0
-- kealib=1.4.5=0
 - krb5=1.13.2=0
-- libgdal=2.0.0=1
-- libgfortran=3.0=0
+- libgdal=2.0.0=0
 - libnetcdf=4.3.3.1=3
 - libpng=1.6.17=0
-- libsodium=1.0.3=0
-- libxml2=2.9.2=0
 - markupsafe=0.23=py35_0
 - matplotlib=1.5.1=np110py35_0
-- mistune=0.7.2=py35_0
-- mkl=11.3.1=0
+- mistune=0.7.2=py35_1
 - nbconvert=4.2.0=py35_0
 - nbformat=4.0.1=py35_0
-- networkx=1.11=py35_0
-- notebook=4.1.0=py35_1
-- numpy=1.10.4=py35_0
-- openssl=1.0.2g=0
-- pandas=0.18.0=np110py35_0
-- path.py=8.2=py35_0
+- nomkl=1.0=0
+- notebook=4.2.0=py35_0
+- numpy=1.10.4=py35_nomkl_0
+- openssl=1.0.2h=0
+- pandas=0.18.1=np110py35_0
+- path.py=8.2.1=py35_0
 - pexpect=4.0.1=py35_0
 - pickleshare=0.5=py35_0
 - pip=8.1.1=py35_1
-- proj4=4.9.1=0
 - ptyprocess=0.5=py35_0
 - pygments=2.1.3=py35_0
-- pyparsing=2.0.3=py35_0
+- pyparsing=2.1.1=py35_0
 - pyqt=4.11.4=py35_1
 - python=3.5.1=0
 - python-dateutil=2.5.2=py35_0
@@ -61,9 +53,7 @@ dependencies:
 - qt=4.8.7=1
 - qtconsole=4.2.1=py35_0
 - readline=6.2=2
-- requests=2.9.1=py35_0
-- scipy=0.17.0=np110py35_2
-- setuptools=20.6.7=py35_0
+- setuptools=20.7.0=py35_0
 - simplegeneric=0.8.1=py35_0
 - sip=4.16.9=py35_0
 - six=1.10.0=py35_0
@@ -73,14 +63,14 @@ dependencies:
 - tornado=4.3=py35_0
 - traitlets=4.2.1=py35_0
 - wheel=0.29.0=py35_0
-- xerces-c=3.1.2=0
 - xz=5.0.5=1
-- zeromq=4.1.3=0
 - zlib=1.2.8=0
 - pip:
+  - backports.shutil-get-terminal-size==1.0.0
   - folium==0.2.1
   - ipython-genutils==0.1.0
   - jupyter-client==4.2.2
   - jupyter-console==4.1.1
   - jupyter-core==4.1.0
   - pyshp==1.2.3
+
